errors.txt
Failed case #1/102: (Wrong answer)
Неправильный результат в 5 строке

Input:
AddNewTasks Alice 5
PerformPersonTasks Alice 5
PerformPersonTasks Alice 5
PerformPersonTasks Alice 1
AddNewTasks Alice 5
PerformPersonTasks Alice 2
GetPersonTasksInfo Alice
PerformPersonTasks Alice 4
GetPersonTasksInfo Alice

Your output:
[]
[{"IN_PROGRESS": 5}, {}]
[{"TESTING": 5}, {}]
[{"DONE": 1}, {"TESTING": 4}]
[]
[{"IN_PROGRESS": 2, "DONE": 2, "DONE": 1}, {"NEW": 3, "TESTING": 2}]
{"NEW": 3, "IN_PROGRESS": 2, "TESTING": 2, "DONE": 2, "DONE": 1, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0}
[{"IN_PROGRESS": 3, "TESTING": 1, "DONE": 1, "DONE": 1, "DONE": 1}, {"IN_PROGRESS": 1, "TESTING": 1, "DONE": 1}]
{"NEW": 0, "IN_PROGRESS": 4, "TESTING": 2, "DONE": 2, "DONE": 1, "DONE": 1, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0, "DONE": 0}

Correct output:
[]
[{"IN_PROGRESS": 5}, {}]
[{"TESTING": 5}, {}]
[{"DONE": 1}, {"TESTING": 4}]
[]
[{"IN_PROGRESS": 2}, {"NEW": 3, "TESTING": 4}]
{"NEW": 3, "IN_PROGRESS": 2, "TESTING": 4, "DONE": 1}
[{"IN_PROGRESS": 3, "TESTING": 1}, {"IN_PROGRESS": 1, "TESTING": 4}]
{"IN_PROGRESS": 4, "TESTING": 5, "DONE": 1}
 (Time used: 0.01/1.00, preprocess time used: 0/None, memory used: 44797952/536870912.)

AddNewTasks Jack 1
PerformPersonTasks Jack 1
AddNewTasks Jack 1
PerformPersonTasks Jack 2
AddNewTasks Jack 1
GetPersonTasksInfo Jack
PerformPersonTasks Jack 3
GetPersonTasksInfo Jack

[]
[{"IN_PROGRESS": 1}, {}]
[]
[{"IN_PROGRESS": 1, "TESTING": 1}, {}]
[]
{"NEW": 1, "IN_PROGRESS": 1, "TESTING": 1, "DONE": 0}
[{"IN_PROGRESS": 1, "TESTING": 1, "DONE": 1}, {}]
{"IN_PROGRESS": 1, "TESTING": 1, "DONE": 1}


AddNewTasks Alice 5
PerformPersonTasks Alice 5
PerformPersonTasks Alice 5
PerformPersonTasks Alice 1
AddNewTasks Alice 5
PerformPersonTasks Alice 2
GetPersonTasksInfo Alice
PerformPersonTasks Alice 4
GetPersonTasksInfo Alice
PerformPersonTasks Alice 5
GetPersonTasksInfo Alice
PerformPersonTasks Alice 10
GetPersonTasksInfo Alice
PerformPersonTasks Alice 10
GetPersonTasksInfo Alice
AddNewTasks Alice 1
GetPersonTasksInfo Alice
PerformPersonTasks Alice 2
GetPersonTasksInfo Alice
PerformPersonTasks Bob 3


[]
[{"IN_PROGRESS": 5}, {}]
[{"TESTING": 5}, {}]
[{"DONE": 1}, {"TESTING": 4}]
[]
[{"IN_PROGRESS": 2}, {"NEW": 3, "TESTING": 4}]
{"NEW": 3, "IN_PROGRESS": 2, "TESTING": 4, "DONE": 1}
[{"IN_PROGRESS": 3, "TESTING": 1}, {"IN_PROGRESS": 1, "TESTING": 4}]
{"IN_PROGRESS": 4, "TESTING": 5, "DONE": 1}
[{"TESTING": 4, "DONE": 1}, {"TESTING": 4}]
{"TESTING": 8, "DONE": 2}
[{"DONE": 8}, {}]
{"DONE": 10}
[{}, {}]
{"DONE": 10}
[]
{"NEW": 1, "DONE": 10}
[{"IN_PROGRESS": 1}, {}]
{"IN_PROGRESS": 1, "DONE": 10}
[{}, {}]


Compile error: b"/tmp/tmpsf72jjvh.cpp: In function 'int main()':\n/tmp/tmpsf72jjvh.cpp:167:27: error: no matching function for call to 'Sqr(int&)'\n
   auto result = Sqr(test);\n
  ^\n/tmp/tmpsf72jjvh.cpp:128:17: note: candidate: template<class Key, class Value> std::map<K, V> Sqr(const std::map<K, V>&)\n map<Key, Value> Sqr(const map<Key, Value>& m) {\n
  ^~~\n/tmp/tmpsf72jjvh.cpp:128:17: note:   template argument deduction/substitution failed:\n/tmp/tmpsf72jjvh.cpp:167:27: note:   mismatched types 'const std::map<K, V>' and 'int'\n
  auto result = Sqr(test);\n
  ^\n/tmp/tmpsf72jjvh.cpp:133:21: note: candidate: template<class First, class Second> std::pair<_T1, _T2> Sqr(const std::pair<_T1, _T2>&)\n pair<First, Second> Sqr(const pair<First, Second>& p) {\n
   ^~~\n/tmp/tmpsf72jjvh.cpp:133:21: note:   template argument deduction/substitution failed:\n/tmp/tmpsf72jjvh.cpp:167:27: note:   mismatched types 'const std::pair<_T1, _T2>' and 'int'\n     auto result = Sqr(test);\n
    ^\n/tmp/tmpsf72jjvh.cpp:138:11: note: candidate: template<class T> std::vector<T> Sqr(const std::vector<T>&)\n vector<T> Sqr(const vector<T>& v) {\n
    ^~~\n/tmp/tmpsf72jjvh.cpp:138:11: note:   template argument deduction/substitution failed:\n/tmp/tmpsf72jjvh.cpp:167:27: note:   mismatched types 'const std::vector<T>' and 'int'\n     auto result = Sqr(test);\n                           ^\n"